[DEV-523]: fix browser scrollbar causing unwanted jumps when interacting with dropdowns

--- a/apps/proem/app/globals.css
+++ b/apps/proem/app/globals.css
@@ -2,6 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+/*
+Fixes the scrollbar jumping issue when opening a modal/dropdown caused by Radix UI & ShadcnUI
+https://github.com/radix-ui/primitives/issues/1925#issuecomment-2007554729
+ */
+html {
+  scrollbar-gutter: stable;
+}
+
+body[style] {
+  margin: 0 auto !important;
+}
+
+body[data-scroll-locked] {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+}
+
 h1, h2, h3 {
   margin: 8px 0;
   font-weight: bold;
